# Full-Stack-Task

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/accounts/: models.py  serializers.py  urls.py  views.py
backend/blog/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/config/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/app/: NavBar.tsx  globals.css  layout.tsx  page.tsx
frontend/app/admin/: layout.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/blogs/: BlogCard.tsx  page.tsx
frontend/app/blogs/[id]/: page.tsx
frontend/app/blogs/[id]/update/: page.tsx
frontend/app/blogs/new/: page.tsx
frontend/app/components/: DateTime.tsx
frontend/app/constants/: config.ts
frontend/app/interfaces/: Blog.ts  Response.ts
frontend/app/store/: authStore.ts
